[package]
name = "gh-api-faker"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1"
actix-session = "0.3"
actix-web = { version="2", features=["rust-tls"] }
env_logger = "0.6"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
